# study

dobrynin_v_v/: dobrynin_v_v.sln
dobrynin_v_v/PicMapApi_course/: CMakeLists.txt  PicMapApi.cpp  PicMapApi.h
dobrynin_v_v/rational/: rational.cpp  rational.h  rational.vcxproj  rational.vcxproj.filters  rational_test.cpp  temp.txt
dobrynin_v_v/vec3d/: vec3d.cpp  vec3d.h  vec3d.vcxproj  vec3d.vcxproj.filters  vec3d_test.cpp
